results/SVCOMP/specgen/log-StringStartEnd01-2024_03_03_02_37_07.txt
public class StringStartEnd01 {
    public static void main(String[] args) {
        String[] strings = {"tested", "testing", "passed", "passing"};

        int i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("te"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("te")) ++i;
        }
        assert i == 2;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("ste", 2));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("ste", 2)) ++i;
        }
        assert i == 1;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].endsWith("ed"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.endsWith("ed")) ++i;
        }
        assert i == 2;
    }
}
error: An error while executing a proof script for main: (error "Solver has unexpectedly terminated")
1 error

public class StringStartEnd01 {
    public static void main(String[] args) {
        String[] strings = {"tested", "testing", "passed", "passing"};

        int i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("te"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("te")) ++i;
        }
        assert i == 2;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("ste", 2));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("ste", 2)) ++i;
        }
        assert i == 1;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].endsWith("ed"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.endsWith("ed")) ++i;
        }
        assert i == 2;
    }
}
error: An error while executing a proof script for main: (error "Solver has unexpectedly terminated")
1 error

public class StringStartEnd01 {
    public static void main(String[] args) {
        String[] strings = {"tested", "testing", "passed", "passing"};

        int i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("te"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("te")) ++i;
        }
        assert i == 2;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("ste", 2));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("ste", 2)) ++i;
        }
        assert i == 1;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].endsWith("ed"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.endsWith("ed")) ++i;
        }
        assert i == 2;
    }
}
error: An error while executing a proof script for main: (error "Solver has unexpectedly terminated")
1 error

public class StringStartEnd01 {
    public static void main(String[] args) {
        String[] strings = {"tested", "testing", "passed", "passing"};

        int i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("te"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("te")) ++i;
        }
        assert i == 2;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("ste", 2));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("ste", 2)) ++i;
        }
        assert i == 1;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].endsWith("ed"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.endsWith("ed")) ++i;
        }
        assert i == 2;
    }
}
error: An error while executing a proof script for main: (error "Solver has unexpectedly terminated")
1 error

public class StringStartEnd01 {
    public static void main(String[] args) {
        String[] strings = {"tested", "testing", "passed", "passing"};

        int i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("te"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("te")) ++i;
        }
        assert i == 2;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("ste", 2));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("ste", 2)) ++i;
        }
        assert i == 1;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].endsWith("ed"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.endsWith("ed")) ++i;
        }
        assert i == 2;
    }
}
/home/max/Documents/JMLGPT/tmp/StringStartEnd01.java:2: verify: Validity is unknown - no model available : (error "Error writing to solver: java.io.IOException: Broken pipe")
    public static void main(String[] args) {
                       ^
1 verification failure

public class StringStartEnd01 {
    public static void main(String[] args) {
        String[] strings = {"tested", "testing", "passed", "passing"};

        int i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("te"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("te")) ++i;
        }
        assert i == 2;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].startsWith("ste", 2));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.startsWith("ste", 2)) ++i;
        }
        assert i == 1;

        i = 0;
        //@ maintaining 0 <= i && i <= strings.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; strings[k].endsWith("ed"));
        //@ decreases strings.length - i;
        for (String string : strings) {
            if (string.endsWith("ed")) ++i;
        }
        assert i == 2;
    }
}
error: An error while executing a proof script for main: (error "Solver has unexpectedly terminated")
1 error

public class StringStartEnd01 {
    public static void void main(String[] strings) {
        //@ requires strings != null;
        //@ ensures (\result == 2);
        int countTe = 0;
        int countSte = 0;
        int countEd = 0;
        
        for (String str : strings) {
            if (str.startsWith("te")) {
                countTe++;
            }
            if (str.startsWith("ste", 2)) {
                countSte++;
            }
            if (str.endsWith("ed")) {
                countEd++;
            }
        }
        
        assert countTe == 2;
        assert countSte == 1;
        assert countEd == 2;
    }
}
/home/max/Documents/JMLGPT/tmp/StringStartEnd01.java:2: error: <identifier> expected
    public static void void main(String[] strings) {
                      ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd01.java:2: error: '(' expected
    public static void void main(String[] strings) {
                       ^
2 errors

public class StringStartEnd01 {
    public static void main(String[] strings) {
        //@ requires strings != null;
        //@ ensures (\result == 2);
        int countTe = 0;
        int countSte = 0;
        int countEd = 0;
        
        for (String str : strings) {
            if (str.startsWith("te")) {
                countTe++;
            }
            if (str.startsWith("ste", 2)) {
                countSte++;
            }
            if (str.endsWith("ed")) {
                countEd++;
            }
        }
        
        assert countTe == 2;
        assert countSte == 1;
        assert countEd == 2;
    }
}
/home/max/Documents/JMLGPT/tmp/StringStartEnd01.java:4: error: A \result expression may not be used in the specification of a method that returns void
        //@ ensures (\result == 2);
                      ^
1 error

public class StringStartEnd01 {
    public static void main(String[] strings) {
        //@ requires strings != null;
        int countTe = 0;
        int countSte = 0;
        int countEd = 0;
        
        for (String str : strings) {
            if (str.startsWith("te")) {
                countTe++;
            }
            if (str.startsWith("ste", 2)) {
                countSte++;
            }
            if (str.endsWith("ed")) {
                countEd++;
            }
        }
        
        assert countTe == 2;
        assert countSte == 1;
        assert countEd == 2;
    }
}
